--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -72,27 +72,21 @@ antlr4-python3-runtime==4.8 # LEVEL_01 # omegaconf 2.1.1 requires antlr4-python3
 #
 dask-ml==2021.10.17 # LEVEL_05 # numpy conflict # A library for distributed and parallel machine learning
 #
-joblib==1.0.1 # LEVEL_01 # LOCKED # pycaret requires this # Lightweight pipelining with Python functions
-#
 tangled-up-in-unicode==0.1.0 # LEVEL_01 # LOCKED # pandas-profiling 3.1.0 requires 0.1.0 # Access to the Unicode Character Database (UCD)
-#
 visions==0.7.4 # LEVEL_04 # LOCKED # pandas-profiling 3.1.0 requires visions[type_image_path]==0.7.4 # Visions
-#
 MarkupSafe==2.0.1 # LEVEL_01 # LOCKED # pandas-profiling 3.1.0 depends on markupsafe~=2.0.1 # Safely add untrusted strings to HTML/XML markup
 #
-alembic==1.4.1 # LOCKED # mlflow 1.21.0 requires it # LEVEL_03 # A database migration tool for SQLAlchemy
-#
+joblib==1.0.1 # LEVEL_01 # LOCKED # pycaret requires this # Lightweight pipelining with Python functions
 pyLDAvis==3.2.2 # LEVEL_04 # LOCKED # pycaret ? # Interactive topic model visualization. Port of the R package
-#
 pycaret==2.2.2 # LEVEL_10 # LOCKED # old dependencies # PyCaret - An open source, low-code machine learning library in Python
 #
-mistune==0.8.4 # LEVEL_01 # LOCKED # nbconvert 6.3.0 requires mistune<2,>=0.8.1 # The fastest markdown parser in pure Python
+mistune==0.8.4 # LEVEL_01 # LOCKED # nbconvert 6.4.4 has requirement mistune<2,>=0.8.1 # The fastest markdown parser in pure Python
 #
 pybullet==3.2.0 # LEVEL_01 # LOCKED # can't update ? # Official Python Interface for the Bullet Physics SDK specialized for Robotics Simulation and Reinforcement Learning
 #
-backoff==1.10.0 # LEVEL_01 # LOCKED # analytics-python requires 1.10.0 # Function decoration for backoff and retry
+backoff==1.10.0 # LEVEL_01 # LOCKED # analytics-python 1.4.0 has requirement backoff==1.10.0 # Function decoration for backoff and retry
 #
-flatbuffers==1.12 # LEVEL_01 # LOCKED # The FlatBuffers serialization format for Python
+flatbuffers==1.12 # LEVEL_01 # LOCKED # tf2onnx 1.9.3 has requirement flatbuffers~=1.12 # The FlatBuffers serialization format for Python
 #
 typeshed-client==1.2.3 # LEVEL_03 # LOCKED # pyanalyze 0.5.0 requires typeshed-client<2,>=1.0.0 # A library for accessing stubs in typeshed
 pydantic==1.8.2 # LEVEL_02 # LOCKED # thinc 8.0.15; spacy 3.2.3 require pydantic!=1.8,!=1.8.1,<1.9.0,>=1.7.4 # Data validation and settings management using python 3.6 type hinting
@@ -241,6 +235,7 @@ fastprogress==1.0.2 # LEVEL_01 # A nested progress with plotting options for fas
 h2o==3.36.0.3 # LEVEL_03 # H2O, Fast Scalable Machine Learning, for python
 #
 gym-unity==0.28.0 # LEVEL_04 # Unity Machine Learning Agents Gym Interface
+gym-notices==0.0.6 # LEVEL_01 # Notices for gym
 mlagents-envs==0.28.0 # LEVEL_03 # Unity Machine Learning Agents Interface
 #
 gensim==4.1.2 # LEVEL_03 # Python framework for fast Vector Space Modelling
@@ -865,7 +860,9 @@ python-socks==2.0.3 # LEVEL_01 # Core proxy (SOCKS4, SOCKS5, HTTP tunneling) fun
 #
 # SQL
 #
+alembic==1.7.7 # LEVEL_03 # A database migration tool for SQLAlchemy
 SQLAlchemy== 1.4.32 # LEVEL_02 # Database Abstraction Library
+Mako==1.2.0 # LEVEL_02 # A super-fast templating language that borrows the best ideas from the existing templating languages
 PyMySQL==1.0.2 # LEVEL_01 # Pure Python MySQL Driver
 pyodbc==4.0.32 # LEVEL_01 # ONLY_OSX # DB API Module for ODBC
 sqlparse==0.4.2 # LEVEL_01 # A non-validating SQL parser
@@ -1051,7 +1048,6 @@ setuptools-scm==6.4.2 # LEVEL_03 # the blessed package to manage your versions b
 tomli==2.0.1 # LEVEL_01 # A lil' TOML parser
 #
 databricks-cli==0.16.4 # LEVEL_03 # A command line interface for Databricks
-Mako==1.2.0 # LEVEL_02 # A super-fast templating language that borrows the best ideas from the existing templating languages
 python-editor==1.0.4 # LEVEL_01 # Programmatically open an editor, capture the result
 querystring-parser==1.2.4 # LEVEL_02 # QueryString parser for Python/Django that correctly handles nested dictionaries
 #
